--- a/aist_handeye_calibration/cfg/aist_handeye_calibration.cfg
+++ b/aist_handeye_calibration/cfg/aist_handeye_calibration.cfg
@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-PACKAGE = "o2as_easy_handeye"
+PACKAGE = "aist_handeye_calibration"
 
 from dynamic_reconfigure.parameter_generator_catkin import *
 
@@ -8,4 +8,4 @@ gen = ParameterGenerator()
 gen.add("planarity_tolerance", double_t, 1 << 0, "A double parameter",
         0.008, 0.0005, 0.015)
 
-exit(gen.generate(PACKAGE, "plane_detector", "o2as_easy_handeye"))
+exit(gen.generate(PACKAGE, "plane_detector", "aist_handeye_calibration"))
