Confirmed kitting.py works.

--- a/aist_handeye_calibration/CMakeLists.txt
+++ b/aist_handeye_calibration/CMakeLists.txt
@@ -32,7 +32,11 @@ generate_dynamic_reconfigure_options(
 
 ## System dependencies are found with CMake's conventions
 
-add_service_files(DIRECTORY srv)
+add_service_files(
+  FILES
+    GetSampleList.srv
+    ComputeCalibration.srv
+)
 
 generate_messages(
   DEPENDENCIES
