--- a/aist_handeye_calibration/package.xml
+++ b/aist_handeye_calibration/package.xml
@@ -9,6 +9,11 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>message_generation</build_depend>
+  <exec_depend>message_runtime</exec_depend>
+
+  <depend>roscpp</depend>
+  <depend>roslib</depend>
   <depend>boost</depend>
   <depend>eigen</depend>
   <depend>std_msgs</depend>
