--- a/aist_navigation/config/costmap_common.yaml
+++ b/aist_navigation/config/costmap_common.yaml
@@ -4,7 +4,8 @@ footprint_padding: 0.01
 robot_base_frame: base_link
 update_frequency: 4.0
 publish_frequency: 3.0
-transform_tolerance: 0.5
+#transform_tolerance: 0.5
+transform_tolerance: 2.0
 
 resolution: 0.05
 
