--- a/package.xml
+++ b/package.xml
@@ -9,18 +9,17 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <depend>pluginlib</depend>
-  <depend>nodelet</depend>
   <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend>
 
   <depend>roscpp</depend>
   <depend>ddynamic_reconfigure</depend>
-  <build_depend>actionlib_msgs</build_depend>
-  <exec_depend>actionlib_msgs</exec_depend>
-  <build_depend>actionlib</build_depend>
-  <exec_depend>actionlib</exec_depend>
+  <depend>actionlib</depend>
+  <depend>actionlib_msgs</depend>
   <depend>geometry_msgs</depend>
+  <depend>pluginlib</depend>
+  <depend>nodelet</depend>
+  <depend>aist_depth_filter</depend>
 
   <export>
     <nodelet plugin="${prefix}/nodelet_description.xml"/>
