--- a/pgrp_moveit_config/config/ros_controllers.yaml
+++ b/pgrp_moveit_config/config/ros_controllers.yaml
@@ -9,25 +9,18 @@ generic_hw_control_loop:
 # Settings for ros_control hardware interface
 hardware_interface:
   joints:
-    - a_tray_joint
-    - b_tray_joint
-    - map_odom_joint
-    - odom_base_joint
-    - l_wheel_joint
-    - r_wheel_joint
-    - torso_lift_joint
-    - bellows_joint
-    - head_pan_joint
-    - head_tilt_joint
-    - shoulder_pan_joint
-    - shoulder_lift_joint
-    - upperarm_roll_joint
-    - elbow_flex_joint
-    - forearm_roll_joint
-    - wrist_flex_joint
-    - wrist_roll_joint
-    - l_gripper_finger_joint
-    - r_gripper_finger_joint
+    - a_bot_shoulder_pan_joint
+    - a_bot_shoulder_lift_joint
+    - a_bot_elbow_joint
+    - a_bot_wrist_1_joint
+    - a_bot_wrist_2_joint
+    - a_bot_wrist_3_joint
+    - b_bot_shoulder_pan_joint
+    - b_bot_shoulder_lift_joint
+    - b_bot_elbow_joint
+    - b_bot_wrist_1_joint
+    - b_bot_wrist_2_joint
+    - b_bot_wrist_3_joint
   sim_control_mode: 1  # 0: position, 1: velocity
 # Publish all joint states
 # Creates the /joint_states topic necessary in ROS
