--- a/dtorobo_moveit_config/config/controller_config.yaml
+++ b/dtorobo_moveit_config/config/controller_config.yaml
@@ -5,15 +5,17 @@ controller_list:
   - a_torobo_gripper_controller
   - b_torobo_gripper_controller
 
+# Publish all joint states -----------------------------------
 joint_state_controller:
-  publish_rate: 500
   type: joint_state_controller/JointStateController
-  
+  publish_rate: 500
+
+# Position Controllers ---------------------------------------
 a_torobo_arm_controller:
-  action_default: true
-  action_ns: follow_joint_trajectory
-  action_type: FollowJointTrajectory
-  allow_partial_joints_goal: true
+  type: "position_controllers/JointTrajectoryController"
+  action_ns: follow_joint_trajectory  # for moveit
+  action_type: FollowJointTrajectory  # for moveit (==>type)
+  action_default: true                # for moveit (==>default)
   joints:
     - a_torobo_arm/joint_1
     - a_torobo_arm/joint_2
@@ -22,13 +24,26 @@ a_torobo_arm_controller:
     - a_torobo_arm/joint_5
     - a_torobo_arm/joint_6
     - a_torobo_arm/joint_7
-  type: position_controllers/JointTrajectoryController
+  allow_partial_joints_goal: true
+  constraints:
+    goal_time: 0.5
+    stopped_velocity_tolerance: 0.05
+    a_torobo_arm/joint_1: {trajectory: 0.01745, goal: 0.01745}
+    a_torobo_arm/joint_2: {trajectory: 0.01745, goal: 0.01745}
+    a_torobo_arm/joint_3: {trajectory: 0.01745, goal: 0.01745}
+    a_torobo_arm/joint_4: {trajectory: 0.01745, goal: 0.01745}
+    a_torobo_arm/joint_5: {trajectory: 0.01745, goal: 0.01745}
+    a_torobo_arm/joint_6: {trajectory: 0.01745, goal: 0.01745}
+    a_torobo_arm/joint_7: {trajectory: 0.01745, goal: 0.01745}
+  stop_trajectory_duration: 0.5
+  state_publish_rate: 20
+  action_monitor_rate: 20
 
 b_torobo_arm_controller:
-  action_default: true
-  action_ns: follow_joint_trajectory
-  action_type: FollowJointTrajectory
-  allow_partial_joints_goal: true
+  type: "position_controllers/JointTrajectoryController"
+  action_ns: follow_joint_trajectory  # for moveit
+  action_type: FollowJointTrajectory  # for moveit (==>type)
+  action_default: true                # for moveit (==>default)
   joints:
     - b_torobo_arm/joint_1
     - b_torobo_arm/joint_2
@@ -37,35 +52,41 @@ b_torobo_arm_controller:
     - b_torobo_arm/joint_5
     - b_torobo_arm/joint_6
     - b_torobo_arm/joint_7
-  type: position_controllers/JointTrajectoryController
+  allow_partial_joints_goal: true
+  constraints:
+    goal_time: 0.5
+    stopped_velocity_tolerance: 0.05
+    b_torobo_arm/joint_1: {trajectory: 0.01745, goal: 0.01745}
+    b_torobo_arm/joint_2: {trajectory: 0.01745, goal: 0.01745}
+    b_torobo_arm/joint_3: {trajectory: 0.01745, goal: 0.01745}
+    b_torobo_arm/joint_4: {trajectory: 0.01745, goal: 0.01745}
+    b_torobo_arm/joint_5: {trajectory: 0.01745, goal: 0.01745}
+    b_torobo_arm/joint_6: {trajectory: 0.01745, goal: 0.01745}
+    b_torobo_arm/joint_7: {trajectory: 0.01745, goal: 0.01745}
+  stop_trajectory_duration: 0.5
+  state_publish_rate: 20
+  action_monitor_rate: 20
 
 a_torobo_gripper_controller:
-  action_default: true
-  action_ns: gripper_cmd
-  action_type: GripperCommand
-  gains:
-    a_torobo_gripper/finger_joint:
-      d: 1
-      i: 5
-      i_clamp: 1
-      p: 200
-  goal_tolerance: 0.01
+  type: "position_controllers/ToroboGripperActionController"
+  action_ns: gripper_cmd              # for moveit
+  action_type: GripperCommand         # for moveit (==>type)
+  action_default: true                # for moveit (==>default)
   joint: a_torobo_gripper/finger_joint
-  stall_timeout: 0.2
-  stalled_velocity_threshold: 0.01
-  type: position_controllers/ToroboGripperActionController
-b_torobo_gripper_controller:
-  action_default: true
-  action_ns: gripper_cmd
-  action_type: GripperCommand
-  gains:
-    b_torobo_gripper/finger_joint:
-      d: 1
-      i: 5
-      i_clamp: 1
-      p: 200
   goal_tolerance: 0.01
-  joint: b_torobo_gripper/finger_joint
-  stall_timeout: 0.2
   stalled_velocity_threshold: 0.01
-  type: position_controllers/ToroboGripperActionController
+  stall_timeout: 0.2
+  gains:
+    a_torobo_gripper/finger_joint: {p: 200, d: 1, i: 5, i_clamp: 1}
+
+b_torobo_gripper_controller:
+  type: "position_controllers/ToroboGripperActionController"
+  action_ns: gripper_cmd              # for moveit
+  action_type: GripperCommand         # for moveit (==>type)
+  action_default: true                # for moveit (==>default)
+  joint: b_torobo_gripper/finger_joint
+  goal_tolerance: 0.01
+  stalled_velocity_threshold: 0.01
+  stall_timeout: 0.2
+  gains:
+    b_torobo_gripper/finger_joint: {p: 200, d: 1, i: 5, i_clamp: 1}
