--- a/aist_iiwa/aist_iiwa_moveit_config/config/ompl_planning.yaml
+++ b/aist_iiwa/aist_iiwa_moveit_config/config/ompl_planning.yaml
@@ -233,7 +233,7 @@ b_iiwa:
   projection_evaluator: joints(b_iiwa_joint_1,b_iiwa_joint_2)
   longest_valid_segment_fraction: 0.005
 iiwa_two_robots:
-  default_planner_config: None
+  default_planner_config: ""
   planner_configs:
     - SBL
     - EST
