--- a/aist_iiwa/aist_iiwa_moveit_config/config/ros_controllersrobotiq85gripper.yaml
+++ b/aist_iiwa/aist_iiwa_moveit_config/config/ros_controllersrobotiq85gripper.yaml
@@ -1,7 +1,7 @@
 # Simulation settings for using moveit_sim_controllers
 moveit_sim_hw_interface:
-  joint_model_group: a_iiwa_arm
-  joint_model_group_pose: home
+  joint_model_group: a_iiwa
+  joint_model_group_pose: standing
 # Settings for ros_control_boilerplate control loop
 generic_hw_control_loop:
   loop_hz: 300
@@ -16,7 +16,7 @@ hardware_interface:
     - a_iiwa_joint_5
     - a_iiwa_joint_6
     - a_iiwa_joint_7
-    - a_iiwa_r85grobotiq_85_left_knuckle_joint
+    - a_iiwa_robotiq_85_left_knuckle_joint
     - b_iiwa_joint_1
     - b_iiwa_joint_2
     - b_iiwa_joint_3
@@ -24,7 +24,7 @@ hardware_interface:
     - b_iiwa_joint_5
     - b_iiwa_joint_6
     - b_iiwa_joint_7
-    - b_iiwa_r85grobotiq_85_left_knuckle_joint
+    - b_iiwa_robotiq_85_left_knuckle_joint
   sim_control_mode: 1  # 0: position, 1: velocity
 # Publish all joint states
 # Creates the /joint_states topic necessary in ROS
@@ -32,6 +32,49 @@ joint_state_controller:
   type: joint_state_controller/JointStateController
   publish_rate: 50
 controller_list:
+  - name: a_iiwa_controller
+    action_ns: follow_joint_trajectory
+    default: True
+    type: FollowJointTrajectory
+    joints:
+      - a_iiwa_joint_1
+      - a_iiwa_joint_2
+      - a_iiwa_joint_3
+      - a_iiwa_joint_4
+      - a_iiwa_joint_5
+      - a_iiwa_joint_6
+      - a_iiwa_joint_7
+  - name: b_iiwa_controller
+    action_ns: follow_joint_trajectory
+    default: True
+    type: FollowJointTrajectory
+    joints:
+      - b_iiwa_joint_1
+      - b_iiwa_joint_2
+      - b_iiwa_joint_3
+      - b_iiwa_joint_4
+      - b_iiwa_joint_5
+      - b_iiwa_joint_6
+      - b_iiwa_joint_7
+  - name: iiwa_two_robots_controller
+    action_ns: follow_joint_trajectory
+    default: True
+    type: FollowJointTrajectory
+    joints:
+      - a_iiwa_joint_1
+      - a_iiwa_joint_2
+      - a_iiwa_joint_3
+      - a_iiwa_joint_4
+      - a_iiwa_joint_5
+      - a_iiwa_joint_6
+      - a_iiwa_joint_7
+      - b_iiwa_joint_1
+      - b_iiwa_joint_2
+      - b_iiwa_joint_3
+      - b_iiwa_joint_4
+      - b_iiwa_joint_5
+      - b_iiwa_joint_6
+      - b_iiwa_joint_7
   - name: a_iiwa_arm_controller
     action_ns: follow_joint_trajectory
     default: True
@@ -49,8 +92,8 @@ controller_list:
     default: True
     type: FollowJointTrajectory
     joints:
-      []
-  - name: a_iiwa_controller
+      a_iiwa_robotiq_85_left_knuckle_joint
+  - name: a_iiwa_groups_controller
     action_ns: follow_joint_trajectory
     default: True
     type: FollowJointTrajectory
@@ -62,7 +105,7 @@ controller_list:
       - a_iiwa_joint_5
       - a_iiwa_joint_6
       - a_iiwa_joint_7
-      - a_iiwa_r85grobotiq_85_left_knuckle_joint
+      - a_iiwa_robotiq_85_left_knuckle_joint
   - name: b_iiwa_arm_controller
     action_ns: follow_joint_trajectory
     default: True
@@ -80,8 +123,8 @@ controller_list:
     default: True
     type: FollowJointTrajectory
     joints:
-      []
-  - name: b_iiwa_controller
+      b_iiwa_robotiq_85_left_knuckle_joint
+  - name: b_iiwa_groups_controller
     action_ns: follow_joint_trajectory
     default: True
     type: FollowJointTrajectory
@@ -93,8 +136,8 @@ controller_list:
       - b_iiwa_joint_5
       - b_iiwa_joint_6
       - b_iiwa_joint_7
-      - b_iiwa_r85grobotiq_85_left_knuckle_joint
-  - name: iiwa_two_robots_controller
+      - b_iiwa_robotiq_85_left_knuckle_joint
+  - name: iiwa_two_robots_groups_controller
     action_ns: follow_joint_trajectory
     default: True
     type: FollowJointTrajectory
@@ -106,7 +149,7 @@ controller_list:
       - a_iiwa_joint_5
       - a_iiwa_joint_6
       - a_iiwa_joint_7
-      - a_iiwa_r85grobotiq_85_left_knuckle_joint
+      - a_iiwa_robotiq_85_left_knuckle_joint
       - b_iiwa_joint_1
       - b_iiwa_joint_2
       - b_iiwa_joint_3
@@ -114,4 +157,4 @@ controller_list:
       - b_iiwa_joint_5
       - b_iiwa_joint_6
       - b_iiwa_joint_7
-      - b_iiwa_r85grobotiq_85_left_knuckle_joint
+      - b_iiwa_robotiq_85_left_knuckle_joint
