Added background subtraction when searching graspabilities.

--- a/aist_routines/config/graspability_parameters.yaml
+++ b/aist_routines/config/graspability_parameters.yaml
@@ -149,3 +149,103 @@ graspability_parameters:
     finger_width: 1
     finger_thickness: 5
     insertion_depth: 1
+  _58331:
+    name: toyota1 9R
+    ns: 2
+    detect_edge: true
+    object_size: 15
+    radius: 8
+    open_width: 100
+    finger_width: 1
+    finger_thickness: 5
+    insertion_depth: 10
+  _58332:
+    name: toyota1 9L
+    ns: 2
+    detect_edge: true
+    object_size: 15
+    radius: 8
+    open_width: 100
+    finger_width: 1
+    finger_thickness: 5
+    insertion_depth: 10
+  _61653:
+    name: toyota1 5R
+    ns: 2
+    detect_edge: true
+    object_size: 15
+    radius: 8
+    open_width: 100
+    finger_width: 1
+    finger_thickness: 5
+    insertion_depth: 10
+  _61654:
+    name: toyota1 5L
+    ns: 2
+    detect_edge: true
+    object_size: 15
+    radius: 8
+    open_width: 100
+    finger_width: 1
+    finger_thickness: 5
+    insertion_depth: 10
+  _64621:
+    name: toyota1 9ZB
+    ns: 2
+    detect_edge: true
+    object_size: 15
+    radius: 8
+    open_width: 100
+    finger_width: 1
+    finger_thickness: 5
+    insertion_depth: 10
+  _68945:
+    name: toyota1 WR
+    ns: 2
+    detect_edge: true
+    object_size: 15
+    radius: 8
+    open_width: 100
+    finger_width: 1
+    finger_thickness: 5
+    insertion_depth: 10
+  _68946:
+    name: toyota1 WL
+    ns: 0
+    detect_edge: false
+    object_size: 4
+    radius: 2
+    open_width: 20
+    finger_width: 1
+    finger_thickness: 5
+    insertion_depth: 4
+  _69430:
+    name: toyota1 Lock
+    ns: 2
+    detect_edge: true
+    object_size: 15
+    radius: 8
+    open_width: 100
+    finger_width: 1
+    finger_thickness: 5
+    insertion_depth: 10
+  _89997:
+    name: toyota1 9L18
+    ns: 2
+    detect_edge: true
+    object_size: 15
+    radius: 8
+    open_width: 100
+    finger_width: 1
+    finger_thickness: 5
+    insertion_depth: 10
+  _64600:
+    name: toyota1 Trunk
+    ns: 2
+    detect_edge: true
+    object_size: 15
+    radius: 8
+    open_width: 100
+    finger_width: 1
+    finger_thickness: 5
+    insertion_depth: 10
