Add support for multiple KHI robots

--- a/aist_control/config/gripper_controller.yaml
+++ b/aist_control/config/gripper_controller.yaml
@@ -1,4 +1,4 @@
-$(arg prefix)gripper_controller:
+$(arg prefix)controller:
   gripper_action:
     type: robot_controllers/ParallelGripperController
     l_gripper_joint: $(arg prefix)l_gripper_finger_joint
