--- a/aist_control/config/iiwa14_controller.yaml
+++ b/aist_control/config/iiwa14_controller.yaml
@@ -3,96 +3,96 @@
   # Effort Position Controllers ---------------------------------------
 
   # VALUES ARE NOT CORRECT !
-  EffortJointInterface_J1_controller:
+  $(arg robot_name)_EffortJointInterface_J1_controller:
     type: effort_controllers/JointPositionController
     joint: $(arg robot_name)_joint_1
     pid: {p: 800.0, i: 100, d: 80.0, i_clamp_min: -10000, i_clamp_max: 10000}
 
-  EffortJointInterface_J2_controller:
+  $(arg robot_name)_EffortJointInterface_J2_controller:
     type: effort_controllers/JointPositionController
     joint: $(arg robot_name)_joint_2
     pid: {p: 800.0, i: 1000, d: 100.0, i_clamp_min: -10000, i_clamp_max: 10000}
 
-  EffortJointInterface_J3_controller:
+  $(arg robot_name)_EffortJointInterface_J3_controller:
     type: effort_controllers/JointPositionController
     joint: $(arg robot_name)_joint_3
     pid: {p: 800.0, i: 10, d: 5.0, i_clamp_min: -10000, i_clamp_max: 10000}
 
-  EffortJointInterface_J4_controller:
+  $(arg robot_name)_EffortJointInterface_J4_controller:
     type: effort_controllers/JointPositionController
     joint: $(arg robot_name)_joint_4
     pid: {p: 800.0, i: 10, d: 80.0, i_clamp_min: -10000, i_clamp_max: 10000}
 
-  EffortJointInterface_J5_controller:
+  $(arg robot_name)_EffortJointInterface_J5_controller:
     type: effort_controllers/JointPositionController
     joint: $(arg robot_name)_joint_5
     pid: {p: 300.0, i: 5, d: 10.0, i_clamp_min: -10000, i_clamp_max: 10000}
 
-  EffortJointInterface_J6_controller:
+  $(arg robot_name)_EffortJointInterface_J6_controller:
     type: effort_controllers/JointPositionController
     joint: $(arg robot_name)_joint_6
     pid: {p: 50.0, i: 1, d: 1.0, i_clamp_min: -10000, i_clamp_max: 10000}
 
-  EffortJointInterface_J7_controller:
+  $(arg robot_name)_EffortJointInterface_J7_controller:
     type: effort_controllers/JointPositionController
     joint: $(arg robot_name)_joint_7
     pid: {p: 10.0, i: 0.1, d: 1.0, i_clamp_min: -10000, i_clamp_max: 10000}
 
   # Forward Position Controllers ---------------------------------------
-  PositionJointInterface_J1_controller:
+  $(arg robot_name)_PositionJointInterface_J1_controller:
     type: position_controllers/JointPositionController
     joint: $(arg robot_name)_joint_1
 
-  PositionJointInterface_J2_controller:
+  $(arg robot_name)_PositionJointInterface_J2_controller:
     type: position_controllers/JointPositionController
     joint: $(arg robot_name)_joint_2
 
-  PositionJointInterface_J3_controller:
+  $(arg robot_name)_PositionJointInterface_J3_controller:
     type: position_controllers/JointPositionController
     joint: $(arg robot_name)_joint_3
 
-  PositionJointInterface_J4_controller:
+  $(arg robot_name)_PositionJointInterface_J4_controller:
     type: position_controllers/JointPositionController
     joint: $(arg robot_name)_joint_4
 
-  PositionJointInterface_J5_controller:
+  $(arg robot_name)_PositionJointInterface_J5_controller:
     type: position_controllers/JointPositionController
     joint: $(arg robot_name)_joint_5
 
-  PositionJointInterface_J6_controller:
+  $(arg robot_name)_PositionJointInterface_J6_controller:
     type: position_controllers/JointPositionController
     joint: $(arg robot_name)_joint_6
 
-  PositionJointInterface_J7_controller:
+  $(arg robot_name)_PositionJointInterface_J7_controller:
     type: position_controllers/JointPositionController
     joint: $(arg robot_name)_joint_7
 
   # Forward Velocity Controllers ---------------------------------------
-  VelocityJointInterface_J1_controller:
+  $(arg robot_name)_VelocityJointInterface_J1_controller:
     type: velocity_controllers/JointVelocityController
     joint: $(arg robot_name)_joint_1
 
-  VelocityJointInterface_J2_controller:
+  $(arg robot_name)_VelocityJointInterface_J2_controller:
     type: velocity_controllers/JointVelocityController
     joint: $(arg robot_name)_joint_2
 
-  VelocityJointInterface_J3_controller:
+  $(arg robot_name)_VelocityJointInterface_J3_controller:
     type: velocity_controllers/JointVelocityController
     joint: $(arg robot_name)_joint_3
 
-  VelocityJointInterface_J4_controller:
+  $(arg robot_name)_VelocityJointInterface_J4_controller:
     type: velocity_controllers/JointVelocityController
     joint: $(arg robot_name)_joint_4
 
-  VelocityJointInterface_J5_controller:
+  $(arg robot_name)_VelocityJointInterface_J5_controller:
     type: velocity_controllers/JointVelocityController
     joint: $(arg robot_name)_joint_5
 
-  VelocityJointInterface_J6_controller:
+  $(arg robot_name)_VelocityJointInterface_J6_controller:
     type: velocity_controllers/JointVelocityController
     joint: $(arg robot_name)_joint_6
 
-  VelocityJointInterface_J7_controller:
+  $(arg robot_name)_VelocityJointInterface_J7_controller:
     type: velocity_controllers/JointVelocityController
     joint: $(arg robot_name)_joint_7
 
@@ -100,7 +100,7 @@
   # Trajectory Controllers ---------------------------------------
   #
   # Effort Position Controllers ---------------------------------------
-  EffortJointInterface_trajectory_controller:
+  $(arg robot_name)_EffortJointInterface_trajectory_controller:
     type: effort_controllers/JointTrajectoryController
     joints:
       - $(arg robot_name)_joint_1
@@ -129,7 +129,7 @@
     stop_trajectory_duration: 0        # Override default
 
   # Forward Position Controllers ---------------------------------------
-  PositionJointInterface_trajectory_controller:
+  $(arg robot_name)_PositionJointInterface_trajectory_controller:
     type: position_controllers/JointTrajectoryController
     joints:
       - $(arg robot_name)_joint_1
@@ -149,7 +149,7 @@
     stop_trajectory_duration: 0        # Override default
 
   # Forward Velocity Controllers ---------------------------------------
-  VelocityJointInterface_trajectory_controller:
+  $(arg robot_name)_VelocityJointInterface_trajectory_controller:
     type: velocity_controllers/JointTrajectoryController
     joints:
       - $(arg robot_name)_joint_1
