--- a/dkhi_moveit_config/config/controllers.yaml
+++ b/dkhi_moveit_config/config/controllers.yaml
@@ -9,14 +9,14 @@ controller_list:
       - a_khi_joint4
       - a_khi_joint5
       - a_khi_joint6
-  - name: lehz_controller
+  - name: a_khi_gripper_controller
     type: GripperCommand
     action_ns: gripper_action
     default: true
     parallel: true
     joint:
-      - l_gripper_finger_joint
-      - r_gripper_finger_joint
+      - a_khi_l_gripper_finger_joint
+      - a_khi_r_gripper_finger_joint
   - name: b_khi_controller
     action_ns: follow_joint_trajectory
     type: FollowJointTrajectory
