--- a/aist_control/config/templates/iiwa14_controller.yaml
+++ b/aist_control/config/templates/iiwa14_controller.yaml
@@ -1,125 +1,125 @@
-#$(arg robot_name):
+#iiwa14:
   #
   # Effort Position Controllers ---------------------------------------
 
   # VALUES ARE NOT CORRECT !
-  $(arg robot_name)_EffortJointInterface_J1_controller:
+  $(arg prefix)EffortJointInterface_J1_controller:
     type: effort_controllers/JointPositionController
-    joint: $(arg robot_name)_joint_1
+    joint: $(arg prefix)joint_1
     pid: {p: 800.0, i: 100, d: 80.0, i_clamp_min: -10000, i_clamp_max: 10000}
 
-  $(arg robot_name)_EffortJointInterface_J2_controller:
+  $(arg prefix)EffortJointInterface_J2_controller:
     type: effort_controllers/JointPositionController
-    joint: $(arg robot_name)_joint_2
+    joint: $(arg prefix)joint_2
     pid: {p: 800.0, i: 1000, d: 100.0, i_clamp_min: -10000, i_clamp_max: 10000}
 
-  $(arg robot_name)_EffortJointInterface_J3_controller:
+  $(arg prefix)EffortJointInterface_J3_controller:
     type: effort_controllers/JointPositionController
-    joint: $(arg robot_name)_joint_3
+    joint: $(arg prefix)joint_3
     pid: {p: 800.0, i: 10, d: 5.0, i_clamp_min: -10000, i_clamp_max: 10000}
 
-  $(arg robot_name)_EffortJointInterface_J4_controller:
+  $(arg prefix)EffortJointInterface_J4_controller:
     type: effort_controllers/JointPositionController
-    joint: $(arg robot_name)_joint_4
+    joint: $(arg prefix)joint_4
     pid: {p: 800.0, i: 10, d: 80.0, i_clamp_min: -10000, i_clamp_max: 10000}
 
-  $(arg robot_name)_EffortJointInterface_J5_controller:
+  $(arg prefix)EffortJointInterface_J5_controller:
     type: effort_controllers/JointPositionController
-    joint: $(arg robot_name)_joint_5
+    joint: $(arg prefix)joint_5
     pid: {p: 300.0, i: 5, d: 10.0, i_clamp_min: -10000, i_clamp_max: 10000}
 
-  $(arg robot_name)_EffortJointInterface_J6_controller:
+  $(arg prefix)EffortJointInterface_J6_controller:
     type: effort_controllers/JointPositionController
-    joint: $(arg robot_name)_joint_6
+    joint: $(arg prefix)joint_6
     pid: {p: 50.0, i: 1, d: 1.0, i_clamp_min: -10000, i_clamp_max: 10000}
 
-  $(arg robot_name)_EffortJointInterface_J7_controller:
+  $(arg prefix)EffortJointInterface_J7_controller:
     type: effort_controllers/JointPositionController
-    joint: $(arg robot_name)_joint_7
+    joint: $(arg prefix)joint_7
     pid: {p: 10.0, i: 0.1, d: 1.0, i_clamp_min: -10000, i_clamp_max: 10000}
 
   # Forward Position Controllers ---------------------------------------
-  $(arg robot_name)_PositionJointInterface_J1_controller:
+  $(arg prefix)PositionJointInterface_J1_controller:
     type: position_controllers/JointPositionController
-    joint: $(arg robot_name)_joint_1
+    joint: $(arg prefix)joint_1
 
-  $(arg robot_name)_PositionJointInterface_J2_controller:
+  $(arg prefix)PositionJointInterface_J2_controller:
     type: position_controllers/JointPositionController
-    joint: $(arg robot_name)_joint_2
+    joint: $(arg prefix)joint_2
 
-  $(arg robot_name)_PositionJointInterface_J3_controller:
+  $(arg prefix)PositionJointInterface_J3_controller:
     type: position_controllers/JointPositionController
-    joint: $(arg robot_name)_joint_3
+    joint: $(arg prefix)joint_3
 
-  $(arg robot_name)_PositionJointInterface_J4_controller:
+  $(arg prefix)PositionJointInterface_J4_controller:
     type: position_controllers/JointPositionController
-    joint: $(arg robot_name)_joint_4
+    joint: $(arg prefix)joint_4
 
-  $(arg robot_name)_PositionJointInterface_J5_controller:
+  $(arg prefix)PositionJointInterface_J5_controller:
     type: position_controllers/JointPositionController
-    joint: $(arg robot_name)_joint_5
+    joint: $(arg prefix)joint_5
 
-  $(arg robot_name)_PositionJointInterface_J6_controller:
+  $(arg prefix)PositionJointInterface_J6_controller:
     type: position_controllers/JointPositionController
-    joint: $(arg robot_name)_joint_6
+    joint: $(arg prefix)joint_6
 
-  $(arg robot_name)_PositionJointInterface_J7_controller:
+  $(arg prefix)PositionJointInterface_J7_controller:
     type: position_controllers/JointPositionController
-    joint: $(arg robot_name)_joint_7
+    joint: $(arg prefix)joint_7
 
   # Forward Velocity Controllers ---------------------------------------
-  $(arg robot_name)_VelocityJointInterface_J1_controller:
+  $(arg prefix)VelocityJointInterface_J1_controller:
     type: velocity_controllers/JointVelocityController
-    joint: $(arg robot_name)_joint_1
+    joint: $(arg prefix)joint_1
 
-  $(arg robot_name)_VelocityJointInterface_J2_controller:
+  $(arg prefix)VelocityJointInterface_J2_controller:
     type: velocity_controllers/JointVelocityController
-    joint: $(arg robot_name)_joint_2
+    joint: $(arg prefix)joint_2
 
-  $(arg robot_name)_VelocityJointInterface_J3_controller:
+  $(arg prefix)VelocityJointInterface_J3_controller:
     type: velocity_controllers/JointVelocityController
-    joint: $(arg robot_name)_joint_3
+    joint: $(arg prefix)joint_3
 
-  $(arg robot_name)_VelocityJointInterface_J4_controller:
+  $(arg prefix)VelocityJointInterface_J4_controller:
     type: velocity_controllers/JointVelocityController
-    joint: $(arg robot_name)_joint_4
+    joint: $(arg prefix)joint_4
 
-  $(arg robot_name)_VelocityJointInterface_J5_controller:
+  $(arg prefix)VelocityJointInterface_J5_controller:
     type: velocity_controllers/JointVelocityController
-    joint: $(arg robot_name)_joint_5
+    joint: $(arg prefix)joint_5
 
-  $(arg robot_name)_VelocityJointInterface_J6_controller:
+  $(arg prefix)VelocityJointInterface_J6_controller:
     type: velocity_controllers/JointVelocityController
-    joint: $(arg robot_name)_joint_6
+    joint: $(arg prefix)joint_6
 
-  $(arg robot_name)_VelocityJointInterface_J7_controller:
+  $(arg prefix)VelocityJointInterface_J7_controller:
     type: velocity_controllers/JointVelocityController
-    joint: $(arg robot_name)_joint_7
+    joint: $(arg prefix)joint_7
 
 
   # Trajectory Controllers ---------------------------------------
   #
   # Effort Position Controllers ---------------------------------------
-  $(arg robot_name)_EffortJointInterface_trajectory_controller:
+  $(arg prefix)EffortJointInterface_trajectory_controller:
     type: effort_controllers/JointTrajectoryController
     joints:
-      - $(arg robot_name)_joint_1
-      - $(arg robot_name)_joint_2
-      - $(arg robot_name)_joint_3
-      - $(arg robot_name)_joint_4
-      - $(arg robot_name)_joint_5
-      - $(arg robot_name)_joint_6
-      - $(arg robot_name)_joint_7
+      - $(arg prefix)joint_1
+      - $(arg prefix)joint_2
+      - $(arg prefix)joint_3
+      - $(arg prefix)joint_4
+      - $(arg prefix)joint_5
+      - $(arg prefix)joint_6
+      - $(arg prefix)joint_7
 
       # VALUES ARE NOT CORRECT !
     gains:
-      $(arg robot_name)_joint_1: {p: 500,  d: 30, i: 15, i_clamp: 30}
-      $(arg robot_name)_joint_2: {p: 200,  d: 10, i: 10, i_clamp: 30}
-      $(arg robot_name)_joint_3: {p: 65,  d: 10, i: 15, i_clamp: 30}
-      $(arg robot_name)_joint_4: {p: 31,  d: 7, i: 12, i_clamp: 30}
-      $(arg robot_name)_joint_5: {p: 23,  d: 3, i: 5, i_clamp: 30}
-      $(arg robot_name)_joint_6: {p: 13,  d: 3, i: 3, i_clamp: 30}
-      $(arg robot_name)_joint_7: {p: 17,  d: 2, i: 2.5, i_clamp: 10}
+      $(arg prefix)joint_1: {p: 500,  d: 30, i: 15, i_clamp: 30}
+      $(arg prefix)joint_2: {p: 200,  d: 10, i: 10, i_clamp: 30}
+      $(arg prefix)joint_3: {p: 65,  d: 10, i: 15, i_clamp: 30}
+      $(arg prefix)joint_4: {p: 31,  d: 7, i: 12, i_clamp: 30}
+      $(arg prefix)joint_5: {p: 23,  d: 3, i: 5, i_clamp: 30}
+      $(arg prefix)joint_6: {p: 13,  d: 3, i: 3, i_clamp: 30}
+      $(arg prefix)joint_7: {p: 17,  d: 2, i: 2.5, i_clamp: 10}
 
     constraints:
       goal_time: 0.5                   # Override default
@@ -129,16 +129,16 @@
     stop_trajectory_duration: 0        # Override default
 
   # Forward Position Controllers ---------------------------------------
-  $(arg robot_name)_PositionJointInterface_trajectory_controller:
+  $(arg prefix)PositionJointInterface_trajectory_controller:
     type: position_controllers/JointTrajectoryController
     joints:
-      - $(arg robot_name)_joint_1
-      - $(arg robot_name)_joint_2
-      - $(arg robot_name)_joint_3
-      - $(arg robot_name)_joint_4
-      - $(arg robot_name)_joint_5
-      - $(arg robot_name)_joint_6
-      - $(arg robot_name)_joint_7
+      - $(arg prefix)joint_1
+      - $(arg prefix)joint_2
+      - $(arg prefix)joint_3
+      - $(arg prefix)joint_4
+      - $(arg prefix)joint_5
+      - $(arg prefix)joint_6
+      - $(arg prefix)joint_7
 
     constraints:
       goal_time: 1.5                   # Override default
@@ -149,26 +149,26 @@
     stop_trajectory_duration: 0        # Override default
 
   # Forward Velocity Controllers ---------------------------------------
-  $(arg robot_name)_VelocityJointInterface_trajectory_controller:
+  $(arg prefix)VelocityJointInterface_trajectory_controller:
     type: velocity_controllers/JointTrajectoryController
     joints:
-      - $(arg robot_name)_joint_1
-      - $(arg robot_name)_joint_2
-      - $(arg robot_name)_joint_3
-      - $(arg robot_name)_joint_4
-      - $(arg robot_name)_joint_5
-      - $(arg robot_name)_joint_6
-      - $(arg robot_name)_joint_7
+      - $(arg prefix)joint_1
+      - $(arg prefix)joint_2
+      - $(arg prefix)joint_3
+      - $(arg prefix)joint_4
+      - $(arg prefix)joint_5
+      - $(arg prefix)joint_6
+      - $(arg prefix)joint_7
 
       # VALUES ARE NOT CORRECT !
     gains:
-      $(arg robot_name)_joint_1: {p: 500,  d: 30, i: 15, i_clamp: 30}
-      $(arg robot_name)_joint_2: {p: 200,  d: 10, i: 10, i_clamp: 30}
-      $(arg robot_name)_joint_3: {p: 65,  d: 10, i: 15, i_clamp: 30}
-      $(arg robot_name)_joint_4: {p: 31,  d: 7, i: 12, i_clamp: 30}
-      $(arg robot_name)_joint_5: {p: 23,  d: 3, i: 5, i_clamp: 30}
-      $(arg robot_name)_joint_6: {p: 13,  d: 3, i: 3, i_clamp: 30}
-      $(arg robot_name)_joint_7: {p: 17,  d: 2, i: 2.5, i_clamp: 10}
+      $(arg prefix)joint_1: {p: 500,  d: 30, i: 15, i_clamp: 30}
+      $(arg prefix)joint_2: {p: 200,  d: 10, i: 10, i_clamp: 30}
+      $(arg prefix)joint_3: {p: 65,  d: 10, i: 15, i_clamp: 30}
+      $(arg prefix)joint_4: {p: 31,  d: 7, i: 12, i_clamp: 30}
+      $(arg prefix)joint_5: {p: 23,  d: 3, i: 5, i_clamp: 30}
+      $(arg prefix)joint_6: {p: 13,  d: 3, i: 3, i_clamp: 30}
+      $(arg prefix)joint_7: {p: 17,  d: 2, i: 2.5, i_clamp: 10}
 
     constraints:
       goal_time: 0.5                   # Override default
