--- a/aist_control/config/templates/torobo_arm_controller.yaml
+++ b/aist_control/config/templates/torobo_arm_controller.yaml
@@ -4,24 +4,24 @@ $(arg controller):
   action_type: FollowJointTrajectory  # for moveit (==>type)
   action_default: true                # for moveit (==>default)
   joints:
-    - $(arg robot_name)_arm/joint_1
-    - $(arg robot_name)_arm/joint_2
-    - $(arg robot_name)_arm/joint_3
-    - $(arg robot_name)_arm/joint_4
-    - $(arg robot_name)_arm/joint_5
-    - $(arg robot_name)_arm/joint_6
-    - $(arg robot_name)_arm/joint_7
+    - $(arg prefix)arm/joint_1
+    - $(arg prefix)arm/joint_2
+    - $(arg prefix)arm/joint_3
+    - $(arg prefix)arm/joint_4
+    - $(arg prefix)arm/joint_5
+    - $(arg prefix)arm/joint_6
+    - $(arg prefix)arm/joint_7
   allow_partial_joints_goal: true
   constraints:
     goal_time: 0.5
     stopped_velocity_tolerance: 0.05
-    $(arg robot_name)_arm/joint_1: {trajectory: 0.01745, goal: 0.01745}
-    $(arg robot_name)_arm/joint_2: {trajectory: 0.01745, goal: 0.01745}
-    $(arg robot_name)_arm/joint_3: {trajectory: 0.01745, goal: 0.01745}
-    $(arg robot_name)_arm/joint_4: {trajectory: 0.01745, goal: 0.01745}
-    $(arg robot_name)_arm/joint_5: {trajectory: 0.01745, goal: 0.01745}
-    $(arg robot_name)_arm/joint_6: {trajectory: 0.01745, goal: 0.01745}
-    $(arg robot_name)_arm/joint_7: {trajectory: 0.01745, goal: 0.01745}
+    $(arg prefix)arm/joint_1: {trajectory: 0.01745, goal: 0.01745}
+    $(arg prefix)arm/joint_2: {trajectory: 0.01745, goal: 0.01745}
+    $(arg prefix)arm/joint_3: {trajectory: 0.01745, goal: 0.01745}
+    $(arg prefix)arm/joint_4: {trajectory: 0.01745, goal: 0.01745}
+    $(arg prefix)arm/joint_5: {trajectory: 0.01745, goal: 0.01745}
+    $(arg prefix)arm/joint_6: {trajectory: 0.01745, goal: 0.01745}
+    $(arg prefix)arm/joint_7: {trajectory: 0.01745, goal: 0.01745}
   stop_trajectory_duration: 0.5
   state_publish_rate: 20
   action_monitor_rate: 20
