--- a/aist_control/config/templates/torobo_gripper_controller.yaml
+++ b/aist_control/config/templates/torobo_gripper_controller.yaml
@@ -3,9 +3,9 @@ $(arg controller):
   action_ns: gripper_cmd              # for moveit
   action_type: GripperCommand         # for moveit (==>type)
   action_default: true                # for moveit (==>default)
-  joint: $(arg robot_name)_gripper/finger_joint
+  joint: $(arg prefix)gripper/finger_joint
   goal_tolerance: 0.01
   stalled_velocity_threshold: 0.01
   stall_timeout: 0.2
   gains:
-    $(arg robot_name)_gripper/finger_joint: {p: 200, d: 1, i: 5, i_clamp: 1}
+    $(arg prefix)gripper/finger_joint: {p: 200, d: 1, i: 5, i_clamp: 1}
