--- a/aist_bringup/config/templates/joint_state_controller.yaml
+++ b/aist_bringup/config/templates/joint_state_controller.yaml
@@ -1,3 +1,3 @@
-$(arg controller):
+joint_state_controller:
   type: joint_state_controller/JointStateController
   publish_rate: $(arg joint_state_frequency)
