--- a/aist_bringup/config/templates/robotiq_85_controller.yaml
+++ b/aist_bringup/config/templates/robotiq_85_controller.yaml
@@ -1,4 +1,4 @@
-$(arg controller):
+$(arg prefix)gripper_controller:
   type: position_controllers/JointTrajectoryController
   joints:
     - $(arg prefix)robotiq_85_left_knuckle_joint
