--- a/aist_bringup/config/robotiq_85_controller.yaml
+++ b/aist_bringup/config/robotiq_85_controller.yaml
@@ -1,9 +1,11 @@
-$(arg prefix)gripper_controller:
-  type: position_controllers/JointTrajectoryController
-  joints:
-    - $(arg prefix)robotiq_85_left_knuckle_joint
-  constraints:
-    goal_time: 0.5
-  state_publish_rate:  25
-  action_monitor_rate: 30
-  stop_trajectory_duration: 0.5
+$(arg prefix)robotiq_85_controller:
+  type: position_controllers/GripperActionController
+  action_ns: gripper_action_controller              # for moveit
+  action_type: CModelCommand         # for moveit (==>type)
+  action_default: true                # for moveit (==>default)
+  joint: $(arg prefix)robotiq_85_left_knuckle_joint
+  goal_tolerance: 0.01
+  stalled_velocity_threshold: 0.01
+  stall_timeout: 0.2
+  gains:
+    $(arg prefix)gripper/finger_joint: {p: 200, d: 1, i: 5, i_clamp: 1}
