--- a/aist_bringup/config/torobo_controller.yaml
+++ b/aist_bringup/config/torobo_controller.yaml
@@ -25,3 +25,15 @@ $(arg prefix)arm_controller:
   stop_trajectory_duration: 0.5
   state_publish_rate: 20
   action_monitor_rate: 20
+
+$(arg prefix)gripper_controller:
+  type: "position_controllers/ToroboGripperActionController"
+  action_ns: gripper_cmd              # for moveit
+  action_type: GripperCommand         # for moveit (==>type)
+  action_default: true                # for moveit (==>default)
+  joint: $(arg prefix)gripper/finger_joint
+  goal_tolerance: 0.01
+  stalled_velocity_threshold: 0.01
+  stall_timeout: 0.2
+  gains:
+    $(arg prefix)gripper/finger_joint: {p: 200, d: 1, i: 5, i_clamp: 1}
